[BEAM-1241] - For certain AATSR-products, TiePointGeoCoding.getPixelPos(GeoPos, PixelPos) yields wrong results
[BEAM-1239] - For MERIS bands the solar flux has the wrong unit
[BEAM-1229] - OBPG SeaWiFS L2 files can not be opened
[BEAM-1228] - Rangefinder does not work
[BEAM-1227] - PConvert doesn't generate images if profile contains calculated RGB bands
[BEAM-1223] - gpt command-line usage generates incorrect XML templates
[BEAM-1222] - gpt command-line tool ignores -p option
[BEAM-1220] - GPF API does not use progress monitor
[BEAM-1215] - NetCDF product appears inverted
[BEAM-1213] - Unit of yellow_subs in MERIS product not correct
[BEAM-1212] - RasterDataNode.isPixelValid(x,y) is not thread safe
[BEAM-1211] - SPOT VGT reader parses product time using a locale timezone
[BEAM-1209] - Unable to collocate two data sets
[BEAM-1208] - ProductUtils.copyFlagBands doesn't copy masks
[BEAM-1206] - CF Profile does not write latitude longitude data when writing pixel geo-coding
[BEAM-1205] - SPOT VGT reader dosn not treat unsigned bands correctly
[BEAM-1204] - Reprojection changes product type
[BEAM-1203]	- Application returns with exit code zero in error case
[BEAM-1202] - PConvert does use the user LOCAL instead of ENGLISH
[BEAM-1201] - GPT does use the user LOCAL instead of ENGLISH
[BEAM-1200] - PConvert doesn't generate images
[BEAM-1197] - GPF N1 patcher is not thread safe
[BEAM-1196] - Latitude shift for non-WGS84 datums
[BEAM-1194] - Open RGB in image view leads to "Unknown band:" error
[BEAM-1192] - Title in histogram does not adjust to current band
[BEAM-1187] - Libraries of SLF4J are included in lib directory
[BEAM-1186] - The Landsat GeoTIFF reader should handle invalid input gracefully
[BEAM-1184] - Reprojection dialog does not remember values
[BEAM-1182] - Libraries of JAI are included twice
[BEAM-1179] - Slightly wrong listing of files in VirtualDir$Zip in beam-spot-vgt-reader
[BEAM-1177] - Index out of bounds for RGB View