@@ -18,6 +18,7 @@
             [BEAM-1263] All processors shall provide help and "about" information<br/>
             [BEAM-1234] The target product of some operators shall not be written<br/>
         	[BEAM-1231] gpt command-line tool should have a 'parallelism' option<br/>
+            [BEAM-1226] Subset operator does not extract flags automatically<br/>
             [BEAM-1223] gpt command-line usage generates incorrect XML templates<br/>
             [BEAM-1222] gpt command-line tool ignores -p option<br/>
             [BEAM-1220] GPF API does not use progress monitor<br/>
